--- a/windows_requirements.yml
+++ b/windows_requirements.yml
@@ -15,5 +15,7 @@ dependencies:
 - scipy=0.19.0
 - seaborn=0.7.1
 - pytorch=0.3.0
+- nb_conda=2.2.1
+- progressbar2=3.34.3
 - pip:
     - torchvision==0.2.0
